# omni-server

./: Cargo.toml  README.md
certs/: cert.pem  key.pem  key_req.csr
config/: Settings.toml
sled_db.db/: conf  snap.0000000000A796B9  snap.0000000000B7088C
src/: conf.rs  fake_db.rs  main.rs
static/js/: main.js
static/style/: bootstrap.css  fa.css  style.css
templates/: 404.html  base.html  downloads.html  index.html  packages.html  packages_query.html  pagination.html
