[package]
name = "omni_server"
version = "0.1.0"
authors = ["David Karrick <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2.5"
actix-web = { version = "1.0.8", features=["rust-tls"]  }
actix-files = "0.1.4"
actix-session = "0.2.0"
futures = "0.1.29"
env_logger = "0.7.0"
bytes = "0.4"
#ifaces = { git = "https://github.com/misuzu/rust-interfaces" }
termion = "1.5.3"
rustls = "0.15"
toml = "0.5"
askama = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
config = "0.9"
lazy_static = "1.4.0"
notify = "4.0.13"
chrono = "0.4.9"
sled = "0.28.0"
bincode = "1.2.0"

[build-dependencies]
askama = "0.8"